--- a/src/main/resources/ValidationMessages_tr.properties
+++ b/src/main/resources/ValidationMessages_tr.properties
@@ -9,15 +9,17 @@
 # ?: \u0131
 #######################################################################################################################
 
-# REGSISTER (N)- ROLLES(M)
+# REGISTER (N)- ROLLES(M)
 # REGISTER
 register.nickname.validation.constraints.NotNull.message = Takma ad\u0131n\u0131z\u0131 bo\u015F ge\u00E7emezsiniz.
 register.name.validation.constraints.NotNull.message=Kullan\u0131c\u0131 ad\u0131n\u0131 bo\u015F ge\u00E7emezsiniz.
 register.surname.validation.constraints.NotNull.message =Kullan\u0131c\u0131 soyad\u0131n\u0131 bo\u015F ge\u00E7emezsiniz.
+
 register.password.validation.constraints.NotNull.message =Kullan\u0131c\u0131 \u015Fifresini bo\u015F ge\u00E7emezsiniz
 register.password.validation.constraints.MinMax.NotNull.message =Kullan\u0131c\u0131 \u015Fifresini en az 7 en fazla 15 karakter yazmal\u0131s\u0131n\u0131z.
 register.password.pattern.validation.constraints.NotNull.message =kullan\u0131c\u0131 \u015Fifresininde en az 7 karakter olmal\u0131, \
   En az 1 tane k\u00FC\u00E7\u00FCk harf,1 tane b\u00FCy\u00FCk harf ve 1 tane \u00F6zel simge yazmal\u0131s\u0131n\u0131z. Examples: Hm123456@.
+
 register.email.validation.constraints.NotNull.message=Kullan\u0131c\u0131 emailini  bo\u015F ge\u00E7emezsiniz.
 register.email.validation.constraints.unique.message=Kullan\u0131c\u0131 emailini  sistemde bulunmaktad\u0131r.
 register.email.validation.constraints.regex.message=Kullan\u0131c\u0131 emailini  uygun formatta yaz\u0131n\u0131z.
